Create partial sums for PQ codebook for use during diversity checks (#511)
* Create partial sums for PQ codebook for use during diversity checks of graph building

Signed-off-by: Jake Luciani <jake@datastax.com>